tests/test5.lmq
let x = 0;
print("Creating global variable x");
x = 1;
print("Setting global variable x to");

function testLocal(){
    const y1 = 5;
    print("Creating immutable local letiable y1");
    let y2 = 10;
    y2 = 20;
    y1 = 10; // error

    print(y2);
    print(y1);
    print(x);
}

testLocal();

function testUpvalue(){ 
    const x1 = 5;
    let x2 = 10;
    const x3;

    function testUpvalueInner(){ 
        print(x1 + x2);
        x2 = 20;
        print(x1 + x2);
        x1 = 10; // error       
    }
    testUpvalueInner();
}


testUpvalue();
